force-app/main/default/objects/OrdenTrabajoDeEstructura__c/OrdenTrabajoDeEstructura__c.object-meta.xml
<CustomObject>
    <label>Orden de Trabajo de Estructura</label>
    <nameField>
        <displayFormat>OTE-{0000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes de Trabajo de Estructuras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>