force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/DetalleReparecion__c.field-meta.xml
<CustomField>
    <fullName>DetalleReparecion__c</fullName>
    <label>Detalle de Repareción</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>