force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/EstructuraEnSitio__c.field-meta.xml
<CustomField>
    <fullName>EstructuraEnSitio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estructura en Sitio</label>
    <referenceTo>EstructuraEnSItio__c</referenceTo>
    <relationshipLabel>Ordenes de Trabajo de Estructuras</relationshipLabel>
    <relationshipName>OrdenesDeTrabajoDeEstructuras</relationshipName>
    <type>Lookup</type>
</CustomField>