force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/FechaCompletado__c.field-meta.xml
<CustomField>
    <fullName>FechaCompletado__c</fullName>
    <label>Fecha Completado</label>
    <type>Date</type>
</CustomField>