force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/FechaPrevista__c.field-meta.xml
<CustomField>
    <fullName>FechaPrevista__c</fullName>
    <label>Fecha Prevista</label>
    <type>Date</type>
</CustomField>