force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/Instalador__c.field-meta.xml
<CustomField>
    <fullName>Instalador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instalador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OrdenesDeTrabajoDeEstructuras</relationshipName>
    <type>Lookup</type>
</CustomField>