force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/Medio__c.field-meta.xml
<CustomField>
    <fullName>Medio__c</fullName>
    <formula>EstructuraEnSitio__r.Medio__r.Producto__r.Name + &quot; - &quot;+ EstructuraEnSitio__r.Medio__r.UbicacionEnSitio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medio</label>
    <type>Text</type>
</CustomField>