force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/OrdenCompra__c.field-meta.xml
<CustomField>
    <fullName>OrdenCompra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orden de Compra</label>
    <referenceTo>OdenDeCompra__c</referenceTo>
    <relationshipLabel>Ordenes de Trabajo de Estructuras</relationshipLabel>
    <relationshipName>OrdenesDeTrabajoDeEstructuras</relationshipName>
    <type>Lookup</type>
</CustomField>