force-app/main/default/objects/OrdenTrabajoDeEstructura__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ordenes de Trabajo de Estructuras</relationshipLabel>
    <relationshipName>OrdenesDeTrabajoDeEstructuras</relationshipName>
    <type>Lookup</type>
</CustomField>